--- a/src/style.css
+++ b/src/style.css
@@ -18,9 +18,6 @@ body {
     font-family: "Source Sans Pro", sans-serif;
     font-weight: 300;
     font-size: 1rem;
-
-    margin: 138px;
-
 }
 
 body:focus {
@@ -47,7 +44,7 @@ li a {
     display: block;
     color: rgb(202, 202, 202);
     text-align: center;
-    padding: 14px 16px;
+    padding: 14em 16em;
     text-decoration: none;
 }
 
@@ -151,7 +148,7 @@ h3 {
 .box-cam-mic .video-cam {
     width: auto;
     height: auto;
-    border-radius: 6px;
+    border-radius: 6em;
     background-color: black;
 
 }
@@ -173,9 +170,9 @@ table {
 
 td,
 th {
-    border: 1px solid #ffffff;
+    border: .1em solid #ffffff;
     text-align: left;
-    padding: 1px;
+    padding: .1em;
 }
 
 tr:nth-child(even) {
@@ -214,9 +211,9 @@ body {
     display: block;
     color: #02424b;
     text-align: center;
-    padding: 14px 16px;
+    padding: 1em 1em;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 1em;
 }
 
 .topnav a:hover {
@@ -263,11 +260,11 @@ body {
 }
 
 .container {
-    margin-right: 580px;
+    margin-right: 38em;
     margin-top: 2em;
 }
 
 #player {
-    margin-right: 280px;
+    margin-right: 10em;
     margin-top: -22em;
 }
