se agrego id de usuario CW para poder enviar alerta sobre su visitante

--- a/src/style.css
+++ b/src/style.css
@@ -281,3 +281,11 @@ canvas{
   
     
 }
+/*Reloj*/
+
+#mainTitle{
+    border: #329D9D solid 20px;
+    border-radius: 5px;
+    font-family: 'Yellowtail', cursive;
+  }
+  
