--- a/src/style.css
+++ b/src/style.css
@@ -172,7 +172,15 @@ tr:nth-child(even) {
     color: #237286;
     padding: .8em;
 }
-
+#mySelectComo {
+    cursor: pointer;
+    float: none;
+    margin: .5em auto;
+    display: block;
+    font-family: "Comfortaa";
+    color: #237286;
+    padding: .8em;
+}
 
 body {
     margin: 0;
@@ -288,4 +296,97 @@ canvas{
     border-radius: 5px;
     font-family: 'Yellowtail', cursive;
   }
-  
+
+
+  .notificacion{
+    color: rgb(226, 7, 7);
+    width: 136px;
+    height: inherit;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.notificacion:after{
+    content: attr(data-count);
+    font-size: 11px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #ff4600;
+    min-width: 26px;
+    height: 26px;
+    border-radius: 50%;
+    font-family: Arial;
+    position: absolute;
+    top: 16px;
+    right: 24px;
+    opacity: 0;
+    transition: .3s;
+    transform: scale(.5);
+}
+
+.notificacion.show-count:after{
+    transform: scale(1);
+    opacity: 1;
+} 
+
+.notificacion span{
+font-size: 50px;
+margin-top:30px;
+
+}		.notificacion.notify span{
+
+    animation: bell 1s;
+    transform-origin: center top;
+}
+		@keyframes bell{
+			0%{
+				transform: rotate(35deg);
+			}
+			12.5%{
+				transform: rotate(-30deg);
+			}
+			25%{
+				transform: rotate(25deg);
+			}
+			37.5%{
+				transform: rotate(-20deg);
+			}
+			50%{
+				transform: rotate(15deg);
+			}
+			62.5%{
+				transform: rotate(-10deg);
+			}
+			75%{
+				transform: rotate(5deg);
+			}
+			100%{
+				transform: rotate(0deg);
+			}
+		}
+
+		.btn{
+			text-align: center;
+			padding: .8em;
+			border: none;
+			color: white;
+			margin: 5px;
+			border-radius: 5px;
+			cursor: pointer;
+			background-color: lightgray;
+			box-shadow: inset 0 -.2em rgba(0,0,0,0.2);
+			outline: none;
+			transition: .2s;
+			will-change: transform;  
+		}
+		.btn.primary{
+			background-color: #7dc800;
+		}
+		.btn:hover{
+			transform: scale(.9);
+		}
+
