--- a/src/style.css
+++ b/src/style.css
@@ -163,7 +163,7 @@ tr:nth-child(even) {
     background-color: #07507260;
 }
 
-#mySelect {
+#mySelect, #empresa {
     cursor: pointer;
     float: none;
     margin: .5em auto;
@@ -289,104 +289,54 @@ canvas{
   
     
 }
-/*Reloj*/
-
-#mainTitle{
-    border: #329D9D solid 20px;
-    border-radius: 5px;
-    font-family: 'Yellowtail', cursive;
+/*notificacion*/
+.time__noty{
+    position:fixed;
+    background:#218694;
+    margin:0;
+    font-family:"Comfortaa";
+    bottom:-100%;
+    right:10px;
+    transition: all .2s;
+    opacity:0;
+    text-align:center
   }
-
-
-  .notificacion{
-    color: rgb(226, 7, 7);
-    width: 136px;
-    height: inherit;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-}
-
-.notificacion:after{
-    content: attr(data-count);
-    font-size: 11px;
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #ff4600;
-    min-width: 26px;
-    height: 26px;
-    border-radius: 50%;
-    font-family: Arial;
-    position: absolute;
-    top: 16px;
-    right: 24px;
-    opacity: 0;
-    transition: .3s;
-    transform: scale(.5);
-}
-
-.notificacion.show-count:after{
-    transform: scale(1);
-    opacity: 1;
-} 
-
-.notificacion span{
-font-size: 50px;
-margin-top:30px;
-
-}		.notificacion.notify span{
-
-    animation: bell 1s;
-    transform-origin: center top;
-}
-		@keyframes bell{
-			0%{
-				transform: rotate(35deg);
-			}
-			12.5%{
-				transform: rotate(-30deg);
-			}
-			25%{
-				transform: rotate(25deg);
-			}
-			37.5%{
-				transform: rotate(-20deg);
-			}
-			50%{
-				transform: rotate(15deg);
-			}
-			62.5%{
-				transform: rotate(-10deg);
-			}
-			75%{
-				transform: rotate(5deg);
-			}
-			100%{
-				transform: rotate(0deg);
-			}
-		}
-
-		.btn{
-			text-align: center;
-			padding: .8em;
-			border: none;
-			color: white;
-			margin: 5px;
-			border-radius: 5px;
-			cursor: pointer;
-			background-color: lightgray;
-			box-shadow: inset 0 -.2em rgba(0,0,0,0.2);
-			outline: none;
-			transition: .2s;
-			will-change: transform;  
-		}
-		.btn.primary{
-			background-color: #7dc800;
-		}
-		.btn:hover{
-			transform: scale(.9);
-		}
-
+  
+   .time__msg{
+    color:#fff;
+    margin:0.5em 4em;
+    display:flex;
+    align-items:center;
+    font-size:16
+  }
+  
+   .time__msg span{
+    font-size:2em;
+    margin-right:5px;
+    display:block;
+    
+  }
+  .time__msg:before{
+    content:"\23f0";
+    position:absolute;
+    right:10px;
+    font-size:1.5em;
+    transition:all .2s;
+    transform:rotate(0);
+    animation:mover 2s linear infinite;
+  }
+  
+  @keyframes fastup {
+      5% {bottom:110px ;right:10px ;opacity:1}
+      10%,20%,95% {bottom:100px ;right:10px ;opacity:1}
+      15% {bottom:105px ;right:10px ;opacity:1}
+      100% {bottom:100px ;right:10px; opacity:0}
+  }
+  
+  @keyframes mover {
+     0% { transform:rotate(0);}
+     5% ,15%,25% { transform:rotate(30deg) scale(1.3);}
+     10% ,20%,30% { transform:rotate(-30deg) scale(1);}
+     35% ,80%,100% { transform:rotate(0);}
+  }
+   
