--- a/src/style.css
+++ b/src/style.css
@@ -163,7 +163,8 @@ tr:nth-child(even) {
     background-color: #07507260;
 }
 
-#mySelect, #empresa {
+#mySelect,
+#empresa {
     cursor: pointer;
     float: none;
     margin: .5em auto;
@@ -172,6 +173,7 @@ tr:nth-child(even) {
     color: #237286;
     padding: .8em;
 }
+
 #mySelectComo {
     cursor: pointer;
     float: none;
@@ -244,11 +246,13 @@ body {
         text-align: left;
     }
 }
+
 /*formulario de visita*/
 .container {
     margin-right: 28em;
     margin-top: 2em;
 }
+
 /*/////////propiedades de camara/////////////*/
 
 video {
@@ -258,15 +262,16 @@ video {
 
 }
 
-#whisky{
+#whisky {
     margin-left: 47em;
     margin-top: 9em;
     width: 25em;
     height: 3.5em;
     display: block;
-    color:#e9f2f3;
-    background-color:#02424b ;
+    color: #e9f2f3;
+    background-color: #02424b;
 }
+
 #player {
     margin-left: 47em;
     margin-top: -25em;
@@ -274,69 +279,109 @@ video {
     height: 20em;
     border-radius: 10% 10% 0% 0%;
 }
-#foto{
+
+#foto {
     width: 10em;
     height: 10em;
 }
 
-canvas{
+canvas {
     width: 13em;
     height: 10em;
     margin-right: 22em;
     margin: 4em;
     margin-top: -80%;
     border-radius: 5%;
-  
-    
+
+
 }
+
 /*notificacion*/
-.time__noty{
-    position:fixed;
-    background:#218694;
-    margin:0;
-    font-family:"Comfortaa";
-    bottom:-100%;
-    right:10px;
+.time__noty {
+    position: fixed;
+    background: #218694;
+    margin: 0;
+    font-family: "Comfortaa";
+    bottom: -100%;
+    right: 10px;
     transition: all .2s;
-    opacity:0;
-    text-align:center
-  }
-  
-   .time__msg{
-    color:#fff;
-    margin:0.5em 4em;
-    display:flex;
-    align-items:center;
-    font-size:16
-  }
-  
-   .time__msg span{
-    font-size:2em;
-    margin-right:5px;
-    display:block;
-    
-  }
-  .time__msg:before{
-    content:"\23f0";
-    position:absolute;
-    right:10px;
-    font-size:1.5em;
-    transition:all .2s;
-    transform:rotate(0);
-    animation:mover 2s linear infinite;
-  }
-  
-  @keyframes fastup {
-      5% {bottom:110px ;right:10px ;opacity:1}
-      10%,20%,95% {bottom:100px ;right:10px ;opacity:1}
-      15% {bottom:105px ;right:10px ;opacity:1}
-      100% {bottom:100px ;right:10px; opacity:0}
-  }
-  
-  @keyframes mover {
-     0% { transform:rotate(0);}
-     5% ,15%,25% { transform:rotate(30deg) scale(1.3);}
-     10% ,20%,30% { transform:rotate(-30deg) scale(1);}
-     35% ,80%,100% { transform:rotate(0);}
-  }
-   
+    opacity: 0;
+    text-align: center
+}
+
+.time__msg {
+    color: #fff;
+    margin: 0.5em 4em;
+    display: flex;
+    align-items: center;
+    font-size: 16
+}
+
+.time__msg span {
+    font-size: 2em;
+    margin-right: 5px;
+    display: block;
+
+}
+
+.time__msg:before {
+    content: "\23f0";
+    position: absolute;
+    right: 10px;
+    font-size: 1.5em;
+    transition: all .2s;
+    transform: rotate(0);
+    animation: mover 2s linear infinite;
+}
+
+@keyframes fastup {
+    5% {
+        bottom: 110px;
+        right: 10px;
+        opacity: 1
+    }
+
+    10%,
+    20%,
+    95% {
+        bottom: 100px;
+        right: 10px;
+        opacity: 1
+    }
+
+    15% {
+        bottom: 105px;
+        right: 10px;
+        opacity: 1
+    }
+
+    100% {
+        bottom: 100px;
+        right: 10px;
+        opacity: 0
+    }
+}
+
+@keyframes mover {
+    0% {
+        transform: rotate(0);
+    }
+
+    5%,
+    15%,
+    25% {
+        transform: rotate(30deg) scale(1.3);
+    }
+
+    10%,
+    20%,
+    30% {
+        transform: rotate(-30deg) scale(1);
+    }
+
+    35%,
+    80%,
+    100% {
+        transform: rotate(0);
+    }
+}
